--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hermes",
   "version": "1.0.0",
   "description": "Hermes is a project created only to create a relation between Collectio(Cobranca Facil) and a payment Gateway(PJBank and others)",
-  "main": "index.ts",
+  "main": "main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,8 +17,18 @@
   },
   "homepage": "https://github.com/iuribrindeiro/Hermes#readme",
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/uuid": "^8.0.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
+  },
+  "dependencies": {
+    "@types/axios": "^0.14.0",
+    "awilix": "^4.2.6",
+    "awilix-express": "^3.0.0",
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "uuid": "^8.1.0"
   }
 }
