--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/mongoose": "^5.7.21",
     "awilix": "^4.2.6",
     "awilix-express": "^3.0.0",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "mongoose": "^5.9.16",
     "uuid": "^8.1.0"
   }
 }
